# xiaomi_certification_tracker

./: .gitignore  .travis.yml  README.md  aio.py  extra.py  fccid.py  mi_global.py  mi_india.py  nbtc.py  pyproject.toml  requirements.txt  scrapy.cfg  script.py  telegram_config.json.example  tenaa.md  tenaa.py  tenaa_cert.py  tenaa_mobile.py  tkdn.py  wifi.md  wifi.py
certification_tracker/: __init__.py  __main__.py  runner.py  scrapy.cfg  settings.py
certification_tracker/database/: __init__.py  utils.py
certification_tracker/database/models/: bis.py  (+20 more)
certification_tracker/pipelines/: bis_pipeline.py  bluetooth_pipeline.py  certipedia_pipeline.py  eec_pipeline.py  fccid_pipeline.py  gcf_pipeline.py  google_play_pipeline.py  imda_pipeline.py  mi_global_pipeline.py  miit_pipeline.py  nbtc_pipeline.py  rfexposure_pipeline.py  sertifikasi_pipeline.py  sirim_pipeline.py  tenaa_cert_pipeline.py  tenaa_shouji_pipeline.py  tkdn_pipeline.py  tuvsud_pipeline.py  wifi_org_pipeline.py  wvcrl_pipeline.py  xsms_pipeline.py
certification_tracker/spiders/: bis.py  bluetooth.py  certipedia.py  eec.py  fccid.py  gcf.py  google_play.py  imda.py  mi_global.py  miit.py  nbtc.py  rfexposure.py  sertifikasi.py  sirim.py  tenaa_cert.py  tenaa_shouji.py  tkdn.py  tuvsud.py  wifi_org.py  wvcrl.py  xsms.py
certification_tracker/utils/: telegram.py
certification_tracker/xiaomi_certification/: items.py  middlewares.py  pipelines.py  settings.py
data/: aio.md  fccid.md  mi_global.md  mi_india.md  nbtc.md  tenaa.md  tenaa_cert.md  tenaa_mobile.md  tkdn.md  wifi.md
old/: aio.md  aio.py
(+67 files in other folders)
