[tool.poetry]
name = "certification_tracker"
version = "2.0.0"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.8.0"
sqlalchemy = "^2.0.7"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
