[tool.poetry]
name = "certification_tracker"
version = "2.0.0"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.11.2"
sqlalchemy = "^2.0.14"
requests = "^2.32.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
