[project]
name = "certification_tracker"
version = "2.0.0"
description = ""
authors = [{ name = "yshalsager", email = "contact@yshalsager.com" }]
requires-python = ">=3.14,<4"
dependencies = [
    "scrapy>=2.11.2,<3",
    "sqlalchemy>=2.0.14,<3",
    "requests>=2.32.0,<3",
]

[dependency-groups]
dev = ["pytest>=9,<10"]
